# ImageSegmentation

./: Image_Segmentation.ipynb  README.md
cpp_inference/: CMakeLists.txt  build_guide.txt  cpp_model.pt (placeholder file).txt  inference.cpp
